Dark mode fixes

--- a/_sass/pm-styles/_pm-context-bar.scss
+++ b/_sass/pm-styles/_pm-context-bar.scss
@@ -5,11 +5,11 @@
 		width: $context-bar-width;
 		min-width: $context-bar-min-width;
 		max-width: var(--width-context-bar, $context-bar-max-width);
-		border-left: 1px solid $pm-global-border;
+		border-left: 1px solid var(--bordercolor-input, $pm-global-border);
 	}
 
 	@include respond-to($breakpoint-medium) {
-		border-top: 1px solid $pm-global-border;
+		border-top: 1px solid var(--bordercolor-input, $pm-global-border);
 	}
 
 	&-inner {
