--- a/_sass/pm-styles/_pm-dark-theme.scss
+++ b/_sass/pm-styles/_pm-dark-theme.scss
@@ -189,7 +189,7 @@ summary {
   --bgcolor-unread-item-column-list: #{$pm-global-altgrey};
   --bgcolor-view-column-detail: #{$pm-secondary-grey};
   --bgcolor-main-area: #{$pm-secondary-grey};
-  --bgcolor-context-bar: #{$pm-global-grey};
+  --bgcolor-context-bar: #{$pm-secondary-grey};
   --bgcolor-subheader: #{$bluish-grey};
   --bgcolor-toolbar: #{$pm-global-altgrey};
   --color-main-area: #{$white};
